# pathlib-extension

./: .gitignore  Makefile  pyproject.toml
pathlib_ext/: __init__.py  path.py
tests/: test_path.py
