[tool.poetry]
name = "pathlib-extension"
version = "0.1.0"
description = ""
authors = ["Kyungmin Lee <rekyungmin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
mypy = "^0.910"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
